# container-mesh

./: .env  .envrc  .gitignore  README.md  compose.yml  rust-toolchain.toml
common/: Cargo.toml
common/src/: default.rs  graph.rs  lib.rs  types.rs  util.rs
container-mesh/: .dockerignore  .envrc  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  rust-toolchain.toml
container-mesh/.cargo/: config.toml
container-mesh/common/: Cargo.toml
container-mesh/common/src/: default.rs  lib.rs  minheap.rs  types.rs  util.rs
container-mesh/coordinator/: Cargo.toml  build.rs
container-mesh/coordinator/src/: main.rs
container-mesh/docker/: Dockerfile.coord  Dockerfile.profile.coord  cmesh  run-ts-peer.sh
container-mesh/peer/: Cargo.toml
container-mesh/peer/src/: context.rs  main.rs
container-mesh/scripts/: README.md  perf-coord.sh  plot-results.py  requirements.txt  test-loop.sh
container-mesh/ts/: .eslintrc.cjs  .eslintrc.js  .gitignore  .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
container-mesh/ts/src/: cmditto.ts  cmpeer.test.ts  cmpeer.ts  consumer.ts  context.ts  default.ts  index.ts  package_setup.ts  peerargs.ts  producer.ts  types.ts  util.test.ts  util.ts
coordinator/: Cargo.toml  build.rs
coordinator/src/: graph.rs  main.rs
docker/: Dockerfile.coord  Dockerfile.peer  Dockerfile.peer-ts  Dockerfile.profile.coord  cmesh  cmesh-run.sh  cmesh.sh  generate-compose.sh  run-coord.sh  run-peer.sh
peer/: Cargo.toml  Dockerfile  build.rs
peer/src/: consumer.rs  context.rs  main.rs  producer.rs
scripts/: perf-coord.sh  plot-results.py  requirements.txt  test-loop.sh
ts/: README.md  jest.config.ts
ts/src/: cmpeer.ts  consumer.ts  default.ts  index.ts  peerargs.ts  types.ts  util.test.ts  util.ts
