[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.2.0", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_cbor = "0.11.1"
serde_json = "1.0.68"
dittolive-ditto = { version = "4.5.2" }
rand = "0.8.5"
local-ip-address = "0.5.6"
env_logger = "0.10.1"
log = "0.4.20"
