[package]
name = "cmesh-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
clap = { version = "=4.2.0", features = ["derive"] }
dittolive-ditto.path = "/Users/fabbri/Code/ditto/rust/dittolive-ditto"
#dittolive-ditto = { version = "4.4.2" }
chrono = "0.4.31"

